// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskSchema Validation should fail validation for Weather action with empty location array 1`] = `
"[
  {
    "code": "too_small",
    "minimum": 1,
    "type": "array",
    "inclusive": true,
    "exact": false,
    "message": "Location array cannot be empty",
    "path": [
      "action",
      "input"
    ]
  }
]"
`;

exports[`TaskSchema Validation should fail validation for a task with empty name 1`] = `
"[
  {
    "code": "too_small",
    "minimum": 1,
    "type": "string",
    "inclusive": true,
    "exact": false,
    "message": "Name of the task cannot be empty.",
    "path": [
      "name"
    ]
  }
]"
`;

exports[`TaskSchema Validation should fail validation for a task with invalid URL 1`] = `
"[
  {
    "code": "custom",
    "message": "Must be a valid URL or an accessible file path",
    "path": [
      "action",
      "input",
      "content"
    ]
  }
]"
`;

exports[`TaskSchema Validation should fail validation for a task with invalid file path 1`] = `
"[
  {
    "code": "custom",
    "message": "Must be a valid URL or an accessible file path",
    "path": [
      "action",
      "input",
      "content"
    ]
  }
]"
`;

exports[`TaskSchema Validation should fail validation for a task with invalid target type 1`] = `
"[
  {
    "received": "invalidType",
    "code": "invalid_enum_value",
    "options": [
      "contact",
      "room"
    ],
    "path": [
      "target",
      "type"
    ],
    "message": "Invalid enum value. Expected 'contact' | 'room', received 'invalidType'"
  }
]"
`;

exports[`TaskSchema Validation should fail validation for an unknown action template 1`] = `
"[
  {
    "code": "invalid_union_discriminator",
    "options": [
      "CustomMessage",
      "Weather",
      "News"
    ],
    "path": [
      "action",
      "template"
    ],
    "message": "Invalid discriminator value. Expected 'CustomMessage' | 'Weather' | 'News'"
  }
]"
`;
